# Masters-Thesis

./: .gitignore  3DStats.json  DataDescription.m  ProcessDriver.m  ProcessDriver.m~  ProcessTraces.m  README  README.html  README.md  TaperWindow.m  accessdata.m  checkpreprocessresults.m  dataDriver.m  datastruct.m  datatally.txt  dbplotter.m  epoch.json  kanStats.json  kanstats.json  moonShots.json  normalizetraces.m  picktimes.m  sacBrowse.m  stationRec.m  stations.json  stations_old.json  stnChrons.json  stnchrons.json  testfile.m  updtime.data  yprime.mexa64
AGUPoster/: blankTemplate.ai  blankTemplate.ait  styleAndThemes.txt  vpMethod.tiff
BensAGUPoster/: .dropbox  Poster_ben.ai
BostockCode/: main.m  main_synth.m  mainx.m  zhuk_new.m  zhuk_original.m
Functions/: ConvertFilterTraces.m  ConvertTraces.m  ConvertTraces.m~  GridSearch.m  IRLSsolver.m  SortEventDirs.m  SortEventDirs.m~  TaperWindowFFT.m  TaperWindowStack.m~  crust.m  fbpfilt.m  filterEventDirs.m  newtonFit.m  pbinIndexer.m  plotStack.m  simdecf.m
data/: ThompsonSnyder2010Paper.data  crust1.json  crust2.json  csStations.json  cshots.json  darbyshirePaper.json  darbyshireProcessed.json  eatonPaper.json  eatonProcessed.json  epoch.json  eventSources.json  moonStations.json  moonvpGeoChron.json  moonvpGeology.json  nanfiles.list  publishedData.py  repicks.txt  station.distance.matrix.csv  stationStackedEvents.json  stations.json  ternplots.json  thompsonPaper.json  thompsonProcessed.json  thomsponProcessed.json  updtime.data  voronoi.data  voronoi.json
docs/: processing.tex
figures/: sadoGridS.fig  sadoRecFuncs.fig
functions/: ConvertFilterTraces.m  GridSearch.m  GsearchKanamori.m  TaperWindowFFT.m  newtonFit.m  performCurveletDenoise.m  plotStack.m
lyx/: handmade-ubcsamplelyx.lyx  makeUBCthesisLyXfromTeX.py  tex2lyx2texSample.tex  ubcsamplelyx.lyx  ubcthesis.layout
mapping/: BedrockGeology.idm  BedrockGeology.ind  BedrockGeology.shx  Cities.dbf  Cities.shp  Cities.shx  GeolProv.dbf  GeolProv.shp  GeolProv.shx  INDEXMAP_GEOLOGY.dbf  INDEXMAP_GEOLOGY.shp  INDEXMAP_GEOLOGY.shx  Rgradient.qml  VoronoiTest.dbf  VoronoiTest.prj~c38741273d1624b5383bf7ea4cde255817595629  VoronoiTest.shp  VoronoiTest.shx  activeSourceHgraduated.qml  archean_proterozoic.qml  conrad13_19.qml  conrad15_17.qml  conradp13_19.qml  conradp15_17.qml  crust1.shp  crust1GeoChron.dbf  crust1GeoChron.shp  crust1GeoChron.shx  crust1Rgraduated.qml  crust2Hgraduated.qml  crust2Rgraduated.qml  crustHtest.qml  geomapper.m  geomapper.qgs  geomapper.qml  hgrid.vrt  moonVpGeoChron.dbf  moonVpGeology.dbf  moonVpGeology.shp  moonVpGeology.shx  moonshotstars.qml  (+27 more)
matlab/: 3Dpolytopes.mat  DataDescription.m  ProcessStack.m  ProcessTraces.m  ZKderivs.m  accessdata.m  autoMori.m  autogrid.m  bootstrap.m  conradPCA.m  conradPCP.m  dataDriver.m  dbplotter.m  derivativeTest.m  distroBoot.m  junkcode.m  logfile  mergePlotFullGridSearch.m  plot3Dsections.m  plotFullGridsearch.m  process.m  process3D.m  processComparisons.m  processed-ok.list  produceCsections.m  refactordb.m  runAutoProcessing.m  runFullGridsearch.m  sacBrowse.m  stnsjson.mat  synthetic.m  ternary.m  testfile.m  testparfor.m  untitled.fig  voronoitri.m
node/: eventDistribution.js  nodecleaner.js  tallyData.js  totalFiles
paper/: GEM2presentation.txt  Makefile.ini  agutmpl.tex  bpostlethwaite_Thesis.aux  bpostlethwaite_Thesis.tex  bptectono.aux  bptectono.tex  draftBP.4ct  draftBP.4tc  draftBP.aux  draftBP.css  draftBP.dvi  draftBP.html  draftBP.idv  draftBP.lg  draftBP.tex  draftBP.update  draftBP.xref  draftBPextra.tex  outline.odt  outline.txt  references.bib  ubcThesisSubmission.aux  ubcThesisSubmission.lof  ubcThesisSubmission.lot  ubcThesisSubmission.out  ubcThesisSubmission.tex  ubcThesisSubmission.toc  ubcsample.aux  ubcsample.out  ubcsample.tex
presentation/: EdmontonTalk_NEW.odp  beamer-arrows.aux  beamer-arrows.nav  beamer-arrows.tex  edmontontalk.aux  edmontontalk.nav  edmontontalk.tex  formula.aux  test.aux  test.tex
presentations/: .~lock.EdmontonTalk_NEW.odp#  GEM2presentation.txt  ImprovedEstimatesofKeyProperties.odt  beamer-arrows.tex  draftGEM2.txt  formula.tex  pointformGEM2.txt
python/: #avgpipe.py#  #loop.log#  .#dbfExtract.py  .#preprocessor.py  2  EvdpEvents  README_pyshp.html  archeanProteroAvg.py  avgpipe.py  checkClusterResults.py  checkpreprocessresults.py  closestShots.py  codecounter.py  compareResults.py  conradPlots.py  crust1json.py  crust1parse.py  crust2json.py  crust2shape.py  dbfExtract.py  dbutils.py  depthPoorEvent.list  deseed.py  deseedCentralI  deseeded  detectProperPicks.py  dircleaner.py  eds = 0.0  emailresponse.py  epoch.json  eventDistribution.py  formatDavesdata.py  freq3plots.py  histplots.py  jsonstream.js  kclusterData.py  kmeanSphere.py  kmeansArc.py  lithologyPlots.py  loopApplyDRIVER.py  (+34 more)
rfmodel/: Makefile  Pstimes.f  README  four1.f  geogmean.f  hilbert.f  hk.f  kbtaper.f  mtdecon.f  mtrf  realft.f  rfxsect  rsach.f  sachdrinfo.f  sacrfmigrate.f  sacslantstack.f  sacxymag.f  setrfslow.f  ss-stack  ss-stack.sh  tokens.f  vsfromrfamp
rfmodel/iasp-grh-6/: .gdb_history  INSTALL  Makefile  Makefile.in  README  config.status  configure  configure.ac  emak135-cdlv.f  emak135-tbt.f  emak135.f  emak135mod.f  emfakeprem.f  emfakeprem20s.f  emiasp91.f  emkghj.f  empemc.f  emprem1s.f  emshum.f  emsp6.f  gtt91.1  libsun.f  libtau.f  libtau.f.v0  libvax.f  limits.inc  limits.inc.in  limits.inc.new  limits.inc.orig  modnam.inc  remodl.f  setbrn.f  tptt.f  ttimes.f  ttimes91.1  ttlim.inc  version.inc
rfmodel/iasp-grh-6/original/: Makefile-orig  libtau.f
rfmodel/iasp-grh-6/utils/: install-sh
sac/: writesac.m
savedfigs/: S-wave_ReceiverFunc.fig  ULMcsection.fig  ULMerror.fig
shellscripts/: ._Get_tt  .gitattributes  README.md  USASTA.txt  a.out  azimtest.sh  bmbctest.txt  bostockStns  cnsn_stn.list  delaz2.f  dum.weed  event.list  event.list.123.6_52.6  event.list.127.7_52.35  event.list.77.9_45.9  event.list.80.2_71.3  event.list.88.3_51.9  event.list.NE  event.list.NW  event.list.central  event.list.eastcoast  event.list.north  g2j  (+15 more)
(+927 files in other folders)
